@@ -6,6 +6,7 @@ use warnings;
 use Test::More;
 use Blockchain::Ethereum::Transaction::EIP1559;
 use Blockchain::Ethereum::Keystore::Key;
+use Blockchain::Ethereum::Utils;
 
 # These tests are based on the result of running the same transactions over ethers.js
 
@@ -52,7 +53,7 @@ subtest "eth transfer" => sub {
         max_priority_fee_per_gas => '0x0',
         gas_limit                => '0x5208',
         to                       => '0x3535353535353535353535353535353535353535',
-        value                    => '0xDE0B6B3A7640000',
+        value                    => parse_units('1', ETH),
         chain_id                 => '0x539'
     );
 
@@ -69,7 +70,7 @@ subtest "eth transfer" => sub {
         '02f86c820539018009825208943535353535353535353535353535353535353535880de0b6b3a764000080c080a070816c3d026c13a53e98e5dc414398e9dcdf23e440e777114a3e04810e0dfb5da07d732e6b7f847b06d2baed033772d78407da8f4010fa9300df79f2209ba4c7a0'
     );
 
-    my $rlp = Blockchain::Ethereum::RLP->new();
+    my $rlp = Blockchain::Ethereum::RLP->new;
     # substring to remove the 02
     my $decoded = $rlp->decode(substr($raw_transaction, 1));
 
@@ -85,7 +86,7 @@ subtest 'with access list' => sub {
         max_fee_per_gas          => '0x4A817C800',
         gas_limit                => '0xC350',
         to                       => '0x1234567890123456789012345678901234567890',
-        value                    => '0x6F05B59D3B20000',
+        value                    => parse_units("0.5", ETH),
         data                     => '0xdeadbeef',
         access_list              => [{
                 address      => '0x1234567890123456789012345678901234567890',
@@ -109,9 +110,8 @@ subtest 'with access list' => sub {
 
     my $raw_transaction = $transaction->serialize;
 
-    is(unpack("H*", $raw_transaction),
-        '02f9010d8205398084773594008504a817c80082c3509412345678901234567890123456789012345678908806f05b59d3b2000084deadbeeff893f859941234567890123456789012345678901234567890f842a00000000000000000000000000000000000000000000000000000000000000001a00000000000000000000000000000000000000000000000000000000000000002f794abcdefabcdefabcdefabcdefabcdefabcdefabcde1a0000000000000000000000000000000000000000000000000000000000000000380a0541c531e3c2b660d47f2bc3a7cc3094ee62cda8211f618545636460291b1948da06eca109f71ee2ccff5272532da31be703089caabd70750e34a1c7f99d9511dce'
-    );
+    is unpack("H*", $raw_transaction),
+        '02f9010d8205398084773594008504a817c80082c3509412345678901234567890123456789012345678908806f05b59d3b2000084deadbeeff893f859941234567890123456789012345678901234567890f842a00000000000000000000000000000000000000000000000000000000000000001a00000000000000000000000000000000000000000000000000000000000000002f794abcdefabcdefabcdefabcdefabcdefabcdefabcde1a0000000000000000000000000000000000000000000000000000000000000000380a0541c531e3c2b660d47f2bc3a7cc3094ee62cda8211f618545636460291b1948da06eca109f71ee2ccff5272532da31be703089caabd70750e34a1c7f99d9511dce';
 };
 
 subtest 'access list encoding' => sub {
@@ -121,7 +121,7 @@ subtest 'access list encoding' => sub {
         max_priority_fee_per_gas => '0x0',
         gas_limit                => '0x1DE2B9',
         to                       => '0x3535353535353535353535353535353535353535',
-        value                    => '0xDE0B6B3A7640000',
+        value                    => parse_units('1', ETH),
         data                     => '0x',
         chain_id                 => '0x539',
         access_list              => [{
@@ -133,7 +133,7 @@ subtest 'access list encoding' => sub {
     my $encoded  = $tx->_encode_access_list;
     my $expected = [['0x1234567890123456789012345678901234567890', ['0x0000000000000000000000000000000000000000000000000000000000000001']]];
 
-    is_deeply($encoded, $expected, 'correct access list encoding');
+    is_deeply $encoded, $expected, 'correct access list encoding';
 };
 
 done_testing;
